# xdr-gtk

./: .gitmodules  CMakeLists.txt  Makefile  README.md  alignment.c  alignment.h  clipboard.c  clipboard.h  conf-defaults.h  conf.c  conf.h  connection.c  connection.h  connection_read.c  connection_read.h  graph.c  graph.h  gui-audio.c  gui-audio.h  gui-connect.c  gui-connect.h  gui-tuner.c  gui-tuner.h  gui-update.c  gui-update.h  gui.c  gui.h  gui_net.c  gui_net.h  icon.rc  keyboard.c  keyboard.h  log.c  log.h  main.c  menu.c  menu.h  pattern.c  pattern.h  rds-utils.h  (+40 more)
icons/: INFO  icons.xml
src/: CMakeLists.txt  antpatt.c  antpatt.h  conf-defaults.h  conf.c  conf.h  icon.rc  log.c  log.h  main.c  rds-utils.c  rds-utils.h  rdsspy.c  rdsspy.h  scan.c  scan.h  scheduler.h  settings.c  settings.h  stationlist.c  stationlist.h  tuner-callbacks.c  tuner-callbacks.h  tuner-conn.c  tuner-conn.h  tuner-filters.c  tuner-filters.h  tuner-scan.c  tuner-scan.h  tuner.c  tuner.h  ui-audio.c  ui-connect.c  ui-connect.h  ui-input.c  ui-input.h  ui-signal.c  ui-signal.h  ui-tuner-set.c  ui-tuner-update.c  (+6 more)
